# ironhack-nlp-project-fake-news

./: README.md  detailed_model_comparison.csv  flake.nix  generate_visualizations.py  model_comparison_results.csv  notebook.ipynb  notebook.py  pyproject.toml  testing_data_with_predictions.csv
models/: bow_logistic_regression_model.pkl  bow_multinomial_naive_bayes_model.pkl  original_logistic_regression_model.pkl  original_multinomial_naive_bayes_model.pkl  original_svm_model.pkl  original_xgboost_model.pkl  tuned_logistic_regression_model.pkl  tuned_svm_model.pkl  tuned_xgboost_model.pkl
slides/: group_presentation.pptx  presentation.html  presentation.md  presentation.pptx
